--- a/GamerHQ/Views/Home/Index.cshtml
+++ b/GamerHQ/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>GamerHQ</h1>
+    <p class="lead">Welcome to GamerHQ. The goal of this site is to allow people who are tired of gaming alone the ability to search for other people who play and enjoy the same games as them. We all have been in the situation where you want to play but have nobody online to play with. Allow GamerHQ to be the pla</p>
+    <p><a href="" class="btn btn-primary btn-lg">I currently go nowhere&raquo;</a></p>
 </div>
 
 <div class="row">
