--- a/GamerHQ/Views/User/Details.cshtml
+++ b/GamerHQ/Views/User/Details.cshtml
@@ -49,6 +49,13 @@
         <dd>
             @Html.DisplayFor(model => model.Age)
         </dd>
+        @*<dt>
+            @Html.DisplayNameFor(model => model.WantsCrossplay)
+        </dt>*@
+
+        @*<dd>
+            @Html.DisplayFor(model => model.WantsCrossplay)
+        </dd>*@
 
     </dl>
 </div>
