Background change and partial view addition

--- a/GamerHQ/Views/Home/Index.cshtml
+++ b/GamerHQ/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>GamerHQ</h1>
-    <p class="lead">Welcome to GamerHQ. The goal of this site is to allow people who are tired of gaming alone the ability to search for other people who play and enjoy the same games as them. We all have been in the situation where you want to play but have nobody online to play with. Allow GamerHQ to be the pla</p>
+    <p class="lead">Welcome to GamerHQ. The goal of this site is to allow people who are tired of gaming alone the ability to search for other people who play and enjoy the same games as them. We all have been in the situation where you want to play but have nobody online to play with. Allow GamerHQ to be the place you can come to find sqaudmates and friends! </p>
     <p><a href="" class="btn btn-primary btn-lg">I currently go nowhere&raquo;</a></p>
 </div>
 
