--- a/GamerHQ/Content/Site.css
+++ b/GamerHQ/Content/Site.css
@@ -1,12 +1,18 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: url(assets/redbadgebackground3.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+    
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+     
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -22,3 +28,27 @@ select,
 textarea {
     max-width: 280px;
 }
+/*.container{
+    color: lightseagreen;
+    background-color: black;
+}*/
+/*.navbar-header {
+    background-color: red;
+}
+.navbar-inverse {
+    background-color: red;
+}
+.navbar-collapse {
+    background-color: red;
+}
+.icon-bar {
+    color: red;
+}
+.navbar-fixed-top {
+    background-color: black;
+}
+.navbar-brand{
+    color: black;
+
+}
+*/
