--- a/GamerHQ/Views/JoiningTable/Create.cshtml
+++ b/GamerHQ/Views/JoiningTable/Create.cshtml
@@ -1,11 +1,5 @@
 ﻿@model GamerHQ_Models.JoiningTableModels.JoiningCreate
 
-@{
-    ViewBag.Title = "Create";
-}
-
-<h2>Create</h2>
-
 
 @using (Html.BeginForm()) 
 {
@@ -15,6 +9,22 @@
         <h4>JoiningCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GameID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GameID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.GameID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
