--- a/GamerHQ/Views/User/Create.cshtml
+++ b/GamerHQ/Views/User/Create.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2></h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    @*<div class="form-horizontal">
-        <h4>UserCreate</h4>
+    <div class="form-horizontal">
+        <h4>Create your Account</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
@@ -54,19 +54,21 @@
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         @Html.LabelFor(model => model.PlatformTypes, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.PlatformTypes, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EnumDropDownListFor(model => model.PlatformTypes, new { htmlAttributes = new { @class = "dropdownlist" } })
             @Html.ValidationMessageFor(model => model.PlatformTypes, "", new { @class = "text-danger" })
         </div>
     </div>
+    @Html.Partial("JoiningTablePartialView")
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
-    @*</div>*@
+    </div>
 }
 
 <div>
