--- a/GamerHQ/Views/User/Details.cshtml
+++ b/GamerHQ/Views/User/Details.cshtml
@@ -57,12 +57,26 @@
             @Html.DisplayFor(model => model.PlatformType)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Genres)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Genres)
+        </dd>
+        @*<dt>
             @Html.DisplayNameFor(model => model.GameListItems)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.GameListItems)
-        </dd>
+        </dd>*@
+        @*<dt>
+            @Html.DisplayNameFor(model => model.JoiningTables)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.JoiningTables)
+        </dd>*@
         @*<dt>
             @Html.DisplayNameFor(model => model.WantsCrossplay)
         </dt>*@
