--- a/GamerHQ/Content/custom.css
+++ b/GamerHQ/Content/custom.css
@@ -2,16 +2,84 @@
     margin-right: -15px;
     margin-left: -15px;
 }
-a.actionlinkbutton:link{
+a.editactionlinkbutton:link{
     color: lightgreen;
 }
-a.actionlinkbutton:visited{
+a.editactionlinkbutton:visited{
+    color: darkred;
+}
+a.editactionlinkbutton:hover {
     color: blue;
 }
-a.actionlinkbutton:hover {
+a.detailsactionlinkbutton:link{
+    color: lightgreen;
+}
+a.detailsactionlinkbutton:visited {
+    color: darkred;
+}
+a.detailsactionlinkbutton:hover {
+    color: blue;
+}
+.col-md-4{
+    color: black;
+    
+}
+.jumbotron{
+    color: darkslateblue;
+}
+.jumbotron p{
+    color: darkslateblue;
+}
+.btn-default{
+    color: black;
+    background-color: antiquewhite;
+    border-radius: 1.5em;
+}
+.btn-primary{
+    border-radius: 15px 50px 30px;
+
+}
+.searchbtn{
+    border-radius: 1em;
+    
+}
+.searchbtn:hover{
+    color: white;
+    background-color: gray;
+}
+.refreshpagebtn{
+    color: gray;
+
+}
+.smallbtn{
+    background-color: whitesmoke;
+    border-radius: 1em;
+    padding: 5px;
+    color: black;
+}
+.smallbtn:hover{
+    background-color: gray;
+    color: black;
+}
+.navbar{
+    background-color: transparent;
+    border: none;
+    color: black;
+    
+}
+.navbarlinks{
+    color: black;
+}
+.navbar-collapse collapse ul nav navbar-nav li navbarbtn {
+    color: black;
+    background-color: black;
+}
+#navbtn{
     color: red;
 }
-.dropdownlist{
-    background-color: black;
-    color: red;
+#navbtn:hover{
+    color: yellow;
+}
+.checkbox{
+    margin: 25px;
 }
