--- a/GamerHQ/Views/Home/Index.cshtml
+++ b/GamerHQ/Views/Home/Index.cshtml
@@ -5,27 +5,25 @@
 <div class="jumbotron">
     <h1>GamerHQ</h1>
     <p class="lead">Welcome to GamerHQ. The goal of this site is to allow people who are tired of gaming alone the ability to search for other people who play and enjoy the same games as them. We all have been in the situation where you want to play but have nobody online to play with. Allow GamerHQ to be the place you can come to find sqaudmates and friends! </p>
-    <p><a href="" class="btn btn-primary btn-lg">I currently go nowhere&raquo;</a></p>
+    <p><a href="https://localhost:44335/Home/About" class="btn btn-primary btn-lg" >About us&raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Before you click!</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           Take a moment to look at the "About" page in order to get a better understanding of how the site is meant to work. Keep in mind it is in its Alpha phase so it may have bugs and will be revised/changed as time passes.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-warning" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>About Us summary</h2>
+        <p> At this moment you are able to edit any users information on the site(none of it is confidential, its simply their info to contact them) but until the access is restricted and roles are applied we must be a non-toxic community and not change the information of others. (We know its tough but be strong. This will be fixed very soon)</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    </div>*@
 </div>
