--- a/GamerHQ/Views/User/Create.cshtml
+++ b/GamerHQ/Views/User/Create.cshtml
@@ -11,11 +11,11 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Create your Account</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*<div class="form-group">
+<div class="form-horizontal">
+    <h4>Create your Account</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @*<div class="form-group">
             @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
@@ -62,13 +62,20 @@
             @Html.ValidationMessageFor(model => model.PlatformTypes, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Genres, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EnumDropDownListFor(model => model.Genres, new { htmlAttributes = new { @class = "dropdownlist" } })
+            @Html.ValidationMessageFor(model => model.Genres, "", new { @class = "text-danger" })
+        </div>
+    </div>
     @Html.Partial("JoiningTablePartialView")
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
-    </div>
+</div>
 }
 
 <div>
