--- a/GamerHQ/Views/Game/Details.cshtml
+++ b/GamerHQ/Views/Game/Details.cshtml
@@ -4,20 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
 <div>
-    <h4>GameDetail</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.GameID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GameID)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.GameName)
         </dt>
@@ -25,7 +15,13 @@
         <dd>
             @Html.DisplayFor(model => model.GameName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Genres)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Genres)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedUtc)
         </dt>
@@ -33,10 +29,9 @@
         <dd>
             @Html.DisplayFor(model => model.CreatedUtc)
         </dd>
-
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.GameID  }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.GameID  }, htmlAttributes: new { @class = "refreshpagebtn btn btn-default smallbtn" })
+    @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "refreshpagebtn btn btn-default smallbtn" })
 </p>
