--- a/GamerHQ/Views/Game/Delete.cshtml
+++ b/GamerHQ/Views/Game/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>GameDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,7 +40,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", "",  htmlAttributes: new { @class = "refreshpagebtn btn btn-default smallbtn" })
         </div>
     }
 </div>
