--- a/GamerHQ/Views/User/Edit.cshtml
+++ b/GamerHQ/Views/User/Edit.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2></h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>UserEdit</h4>
+    <h4></h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -76,7 +76,6 @@
             </div>
         </div>
     </div>
-    @*@Html.Partial("UserEditPartial")*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
@@ -86,5 +85,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "", htmlAttributes: new { @class = "refreshpagebtn btn btn-default smallbtn" })
 </div>
