--- a/GamerHQ/Views/Game/Delete.cshtml
+++ b/GamerHQ/Views/Game/Delete.cshtml
@@ -25,7 +25,7 @@
             @Html.DisplayFor(model => model.GameName)
         </dd>
 
-        <dt>
+        <dt >
             @Html.DisplayNameFor(model => model.CreatedUtc)
         </dt>
 
@@ -39,7 +39,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="deletebtn btn-default" /> |
             @Html.ActionLink("Back to List", "Index", "",  htmlAttributes: new { @class = "refreshpagebtn btn btn-default smallbtn" })
         </div>
     }
