--- a/GamerHQ/Content/custom.css
+++ b/GamerHQ/Content/custom.css
@@ -47,11 +47,9 @@ a.detailsactionlinkbutton:hover {
     color: lightcyan;
     margin: 0px auto 0px auto;
 }
-.btn-default {
-    color: white;
-    font-size: 15px;
-    font-weight:bold;
-    background-color: #337ab7;
+.btn-default{
+    color: black;
+    background-color: antiquewhite;
     border-radius: 1.5em;
 }
 .btn-primary{
@@ -71,14 +69,14 @@ a.detailsactionlinkbutton:hover {
 
 }
 .smallbtn{
-    background-color: honeydew;
+    background-color: whitesmoke;
     border-radius: 1em;
     padding: 5px;
     color: black;
 }
 .smallbtn:hover{
     background-color: gray;
-    color: lightgreen;
+    color: black;
 }
 .navbar{
     background-color: transparent;
