--- a/GamerHQ/Views/Home/Index.cshtml
+++ b/GamerHQ/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>Gamer<br />HQ</h1>
     <p class="lead">Welcome to GamerHQ. The goal of this site is to allow people who are tired of gaming alone the ability to search for other people who play and enjoy the same games as them. We all have been in the situation where you want to play but have nobody online to play with. Allow GamerHQ to be the place you can come to find sqaudmates and friends! </p>
     <br />
-    <p>We are viewing this app as an "Admin". This is not exactly how it would look for a regular user (i.e changing the info of other users).</p>
+    <p>We are viewing this app as an "Admin". This is not exactly how it would look for a user.</p>
 
     <p><a href="https://localhost:44335/Home/About" class="btn btn-primary btn-lg">About us&raquo;</a></p>
 </div>
@@ -17,11 +17,12 @@
         <p>
            Take a moment to look at the "About" page in order to get a better understanding of how the site is meant to work. Keep in mind it is in its Alpha phase so it may have bugs and will be revised/changed as time passes.
         </p>
-        <p><a class="btn btn-default" href="https://localhost:44335/Home/About">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>About Us summary</h2>
         <p> At this moment you are able to edit any users information on the site(none of it is confidential, its simply their info to contact them) but until the access is restricted and roles are applied we must be a non-toxic community and not change the information of others. (We know its tough but be strong. This will be fixed very soon)</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
    
 </div>
